<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flir_camera_driver</name>
  <version>0.1.4</version>
  <description>
    ROS2 package to publish images from FLIR cameras. 
    Depends on FLIR's Spinnaker and Pyspin, as well as the simple-pyspin package.
  </description>
  <maintainer email="tlmohren@gmail.com">tlmohren</maintainer>
  <license>LGPLv3</license>

  <depend>rlcpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>